src/test/resources/regression/xlang/passing/ReturnNoAliasing1.scala
import leon.lang._

object ReturnNoAliasing1 {

  case class A(var x: Int)

  def f(y: Int): A = A(y)

}
